--- a/views/_content.pug
+++ b/views/_content.pug
@@ -6,10 +6,16 @@ html
         meta(name="robots", content="noindex, nofollow")
         link(rel="stylesheet", href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.1/css/bootstrap.min.css")
         script(src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js")
+        script(src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js")
+        script(src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.1/js/bootstrap.min.js")
         block head
     body
-        nav.navbar.navbar-light.bg-light
+        nav.navbar.navbar-light.bg-light.navbar-expand-sm
             .container
                 a.navbar-brand(href="/") Tulip
+                .collapse.navbar-collapse
+                    ul.navbar-nav.mr-auto
+                        if user
+                            li.nav-item: a.nav-link(href="/profile") @#{user.screenName}
         main.container
             block body
